--- a/src/styles/_profilePop.scss
+++ b/src/styles/_profilePop.scss
@@ -15,8 +15,9 @@
         margin: 0px 0px;
         padding: 0px;
         li {
-            display: grid;
-            grid-template-columns: 1fr 3fr;
+            display: flex;
+            // grid-template-columns: 1fr 3fr;
+            gap: 15px;
             align-items: center;
             list-style: none;
             padding: 10px 10px;
@@ -55,6 +56,27 @@
 
         li:hover {
             filter: brightness(1.2);
+        }
+    }
+    
+    @media (max-width: 768px) {
+        width: 150px;
+
+        
+    }
+
+    @media only screen and (min-width : 1921px) {
+        width: 300px;
+        ul {
+            li {
+                font-size: 1.5em;
+
+                .btn-container {
+                    svg, img {
+                        height: 50px;
+                    }
+                }
+            }
         }
     }
 }
