--- a/src/styles/_createPost.scss
+++ b/src/styles/_createPost.scss
@@ -57,5 +57,90 @@
         .error-msg {
             color: red;
         }
-}
+    }
+
+    @media only screen and (max-width : 480px){
+        width: 97%;
+        .create-post-container {
+            width: 100%;
+
+            .post-form {
+                width: 100%;
+                svg, img {
+                    height: 40px;
+                }
+    
+                .input { 
+                    width: 90%;
+                    font-size: 1em;
+                    min-height: 40px;
+                }
+            }
+
+        }
+    }
+
+    @media only screen and (min-width : 480px) and (max-width: 768px){
+        width: 97%;
+        .create-post-container {
+            width: 100%;
+
+            .post-form {
+                width: 100%;
+                svg, img {
+                    height: 40px;
+                }
+    
+                .input { 
+                    width: 90%;
+                    font-size: 1em;
+                    min-height: 40px;
+                }
+            }
+
+        }
+    }
+
+    @media only screen and (min-device-width : 768px) 
+                        and (max-device-width : 1024px) {
+        .create-post-container {
+            width: 500px;
+
+            .post-form {
+                svg, img {
+                    height: 40px;
+                }
+    
+                .input { 
+                    width: 380px;
+                    font-size: 1em;
+                    min-height: 40px;
+                }
+            }
+
+        }
+    }
+    
+    @media only screen and (min-width : 1921px) {
+        .create-post-container {
+            width: 1000px;
+
+            .post-form {
+                svg, img {
+                    height: 100px;
+                }
+    
+                .input { 
+                    width: 750px;
+                    font-size: 1.5em;
+                }
+            }
+    
+            .btn-container {
+                button {
+                    font-size: 1.2em;
+                }  
+            }
+        }
+    }
 }
