--- a/src/styles/_searchBox.scss
+++ b/src/styles/_searchBox.scss
@@ -36,4 +36,17 @@
             filter: brightness(1.2);
         }
     }
+
+    @media only screen and (min-width : 1921px) {
+        width: 350px;
+
+        ul {
+            li {
+                img, svg {
+                    height: 50px !important;
+                }
+                font-size: 1.5em;
+            }
+        }
+    }
 }
